Name:            blockio
Version:         0.0-2006-02-03
Author:          Peter Simons <simons@cryp.to>
License:         GPL
Maintainer:      simons@cryp.to
Homepage:        http://cryp.to/blockio/
Synopsis:        Block-oriented I/O Driver
Description:     Block-oriented I/O Driver
Build-Depends:   base, mtl
Exposed-Modules:
    System.IO.Driver
